# orkflow

./: README.md  manage.py  pyproject.toml
.bruno/: bruno.json  execute-order-state-actions.bru  list-order-state-actions.bru  list-order-states.bru
core/: admin.py  apps.py  models.py  serializers.py  views.py
core/guards/: base.py  registry.py
core/migrations/: 0001_initial.py  0002_state_enter_guard_state_exit_guard.py  0003_transition_delete_movement.py  0004_remove_transition_from_states_remove_transition_slug_and_more.py  0005_alter_transition_unique_together.py
core/serializers/: __init__.py
core/strategies/: __init__.py  base.py  python_function.py  registry.py
core/views/: __init__.py
oms_demo/: admin.py  apps.py  models.py  strategies.py  urls.py  views.py
oms_demo/guards/: payments.py
oms_demo/migrations/: 0001_initial.py  0002_order__slug.py  0003_remove_order__slug.py  0004_order_payment_status.py
oms_demo/strategies/: __init__.py  maileroo_email.py
oms_ui_demo/: index.html  package-lock.json  package.json
oms_ui_demo/src/: App.tsx
orkflow/: asgi.py  settings.py  urls.py  wsgi.py
